# sqlite3-cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: library-config-version.cmake.in
